# nmalign

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  Makefile  README.md  ocrd-tool.json  pyproject.toml  requirements.txt  setup.py
.github/workflows/: docker-image.yml  test-python.yml
nmalign/: __init__.py
nmalign/lib/: align.py
nmalign/ocrd/: cli.py  ocrd-tool.json
nmalign/scripts/: __init__.py  cli.py
tests/: test_all.py
