[build-system]
requires = ["setuptools>=61.0.0", "wheel", "setuptools-ocrd"]

[project]
name = "nmalign"
authors = [
    {name = "Robert Sachunsky", email = "sachunsky@informatik.uni-leipzig.de"},
]
description = "forced alignment of lists of string by fuzzy string matching"
readme = "README.md"
license.text = "MIT"
requires-python = ">=3.8"

dynamic = ["version", "dependencies"]

# https://pypi.org/classifiers/
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Other Audience",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Text Processing",
]

[project.scripts]
ocrd-nmalign-merge = "nmalign.ocrd.cli:ocrd_nmalign_merge"
nmalign = "nmalign.scripts.cli:cli"

[project.urls]
Homepage = "https://github.com/bertsky/nmalign"
Repository = "https://github.com/bertsky/nmalign.git"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.package-data]
"*" = ['*.json', '*.yml', '*.yaml', '*.csv.gz', '*.jar', '*.zip']
